--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "andreiio/blade-remix-icon": "^3.6",
+        "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "hasnayeen/blade-eva-icons": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
